RESOLVED FIXED41445
visited links show up with black background
https://bugs.webkit.org/show_bug.cgi?id=41445
Summary visited links show up with black background
sideshowbarker
Reported 2010-06-30 23:09:48 PDT
steps to reproduce: 1. visit http://placenamehere.com/article/402/ProgressiveEnhancementForBetterPerformance 2. click on a link 3. go back to http://placenamehere.com/article/402/ProgressiveEnhancementForBetterPerformance Notice that the link you visited now shows up with a black background.
Attachments
reduced test case (161 bytes, text/html)
2011-01-20 08:48 PST, Alexey Proskuryakov
no flags
Patch (21.96 KB, patch)
2011-04-06 12:47 PDT, Dave Hyatt
no flags
Patch (26.32 KB, patch)
2011-04-06 12:54 PDT, Dave Hyatt
mitz: review+
Maciej Stachowiak
Comment 1 2010-06-30 23:13:28 PDT
Seems likely this is somehow fallout from visited link privacy, but it's hard to tell definiteively.
Alexey Proskuryakov
Comment 2 2011-01-19 17:21:54 PST
I cannot reproduce this with r76045. Could you please check if this still happens for you?
sideshowbarker
Comment 3 2011-01-20 06:49:14 PST
(In reply to comment #2) > I cannot reproduce this with r76045. Could you please check if this still happens for you? I can reproduce it with the latest nightly, though not with http://placenamehere.com/article/402/ProgressiveEnhancementForBetterPerformance/ any longer. I'm running a workspace build now to check against the latest trunk. The pages I can reproduce it with are unfortunately not public ones; they are pages at the W3C site that require authentication. But Maciej does have access to them; for example: http://www.w3.org/2002/09/wbs/44061/20080526_media-requirements/ I've been trying to put together a reduction from that to demonstrate the bug but have not been able to so far. Maciej, in the mean time if you can re-confirm this by checking at that WBS URL above, please change the status back.
Alexey Proskuryakov
Comment 4 2011-01-20 08:38:17 PST
I can see it, too. Confirmed with r75996, not a regression from Safari 5.
Alexey Proskuryakov
Comment 5 2011-01-20 08:48:36 PST
Created attachment 79605 [details] reduced test case This is weird, the problem occurs with just a single rule: a:link { background:#eee; }
Alexey Proskuryakov
Comment 6 2011-01-20 08:54:00 PST
Dave Hyatt
Comment 7 2011-04-06 12:47:26 PDT
Dave Hyatt
Comment 8 2011-04-06 12:54:39 PDT
Dave Hyatt
Comment 9 2011-04-06 13:07:01 PDT
Fixed in r83087.
Note You need to log in before you can comment on or make changes to this bug.