https://bugs.webkit.org/show_bug.cgi?id=41445

Reviewed by Dan Bernstein.

Visited links painting with black background. Make sure that if the visited style has
the initial background color (transparent) set that we just use the unvisited color.

Source/WebCore:

Added fast/history/visited-link-background-color.html

* rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::visitedDependentColor):

LayoutTests:

Added fast/history/visited-link-background-color.html
* fast/history/visited-link-background-color.html: Added.
* platform/mac/fast/history/visited-link-background-color-expected.checksum: Added.
* platform/mac/fast/history/visited-link-background-color-expected.png: Added.
* platform/mac/fast/history/visited-link-background-color-expected.txt: Added.



Canonical link: https://commits.webkit.org/72867@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83087 268f45cc-cd09-0410-ab3c-d52691b4dbfc