Source/WebCore/rendering/style/RenderStyle.cpp
@@ -1146,6 +1146,14 @@ const Color RenderStyle::visitedDependentColor(int colorProperty) const
         return unvisitedColor;
     Color visitedColor = visitedStyle->colorIncludingFallback(colorProperty, borderStyle);
 
+    // FIXME: Technically someone could explicitly specify the color transparent, but for now we'll just
+    // assume that if the background color is transparent that it wasn't set. Note that it's weird that
+    // we're returning unvisited info for a visited link, but given our restriction that the alpha values
+    // have to match, it makes more sense to return the unvisited background color if specified than it
+    // does to return black. This behavior matches what Firefox 4 does as well.
+    if (colorProperty == CSSPropertyBackgroundColor && visitedColor == Color::transparent)
+        return unvisitedColor;
+
     // Take the alpha from the unvisited color, but get the RGB values from the visited color.
     return Color(visitedColor.red(), visitedColor.green(), visitedColor.blue(), unvisitedColor.alpha());
 }
